add share button

--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -98,7 +98,7 @@ comment:
 # http://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Share
 share:
   # Share plugin name
-  type: 
+  type: sharejs
 # Sidebar settings.
 # Please be noted that a sidebar is only visible when it has at least one widget
 sidebar:
