add baidu tracking

--- a/themes/icarus/_config.yml
+++ b/themes/icarus/_config.yml
@@ -211,7 +211,7 @@ plugins:
   # https://ppoffice.github.io/hexo-theme-icarus/Plugins/General/site-analytics-plugin/#Baidu-Analytics
   baidu-analytics:
     # Baidu Analytics tracking id
-    tracking_id: 
+    tracking_id: e204b736e83e085afaa171efcb954f86
   # Hotjar user feedback plugin
   # https://ppoffice.github.io/hexo-theme-icarus/Plugins/General/site-analytics-plugin/#Hotjar
   hotjar:
