--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,7 @@ future: true
 highlight:
   enable: true
   line_number: true
-  auto_detect: false
-  tab_replace: ''
+  tab_replace: 
 
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
