--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/icarus"]
 	path = themes/icarus
-	url = git@github.com:hashmaparraylist/hexo-theme-icarus.git
+	url = https://github.com/hashmaparraylist/hexo-theme-icarus.git
