--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
   only:
     - develop # build master branch only
 script:
-  - cp -ip ./_config.theme.yaml ./themes/icarus/_config.yml
+  - cp -ip ./_config.theme.yml ./themes/icarus/_config.yml
   - hexo generate # generate static files
 deploy:
   provider: pages
