--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "server": "cp -ip _config.theme.yml themes/icarus/_config.yml & hexo server"
   },
   "hexo": {
-    "version": "4.1.0"
+    "version": "4.2.0"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "hexo": "^4.1.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-generator-archive": "^1.0.0",
