feat(plugin): add mermaid plugin

--- a/_config.yml
+++ b/_config.yml
@@ -102,3 +102,10 @@ deploy:
   repo: 
   branch: 
   
+# mermaid chart
+mermaid: ## mermaid url https://github.com/knsv/mermaid
+  enable: true  # default true
+  version: "8.6.0" # default v7.1.2
+  options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
+    #startOnload: true  // default true
+
