--- a/_config.theme.yml
+++ b/_config.theme.yml
@@ -8,6 +8,7 @@ meta:
 rss: 
 # Path or URL to the website's logo to be shown on the left of the navigation bar or footer
 logo: /images/logo.svg
+variant: cyberpunk
 # Open Graph metadata
 # https://hexo.io/docs/helpers.html#open-graph
 open_graph:
@@ -51,7 +52,8 @@ article:
   highlight:
     # Code highlight themes
     # https://github.com/highlightjs/highlight.js/tree/master/src/styles
-    theme: atom-one-light
+    # theme: atom-one-light
+    theme: xt256
     # Show code copying button
     clipboard: true
     # Default folding status of the code blocks. Can be "", "folded", "unfolded"
