--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "server": "cp -ip _config.theme.yml themes/icarus/_config.yml & hexo server"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "5.4.0"
   },
   "dependencies": {
+    "bulma-stylus": "0.8.0",
     "cheerio": "^1.0.0-rc.3",
-    "hexo": "^4.1.0",
+    "hexo": "^5.0.0",
     "hexo-deployer-git": "^2.1.0",
     "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-less": "^1.0.0",
-    "hexo-renderer-marked": "^2.0.0",
-    "hexo-renderer-stylus": "^1.1.0",
-    "hexo-server": "^1.0.0"
+    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-server": "^2.0.0",
+    "hexo-theme-icarus": "^4.1.2"
   }
 }
