--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -94,7 +94,7 @@ head:
         # E.g., name=theme-color;content=#123456 => <meta name="theme-color" content="#123456">
         - ''
     # URL or path to the website's RSS atom.xml
-    rss: 
+    rss: rss2.xml
 # Page top navigation bar configurations
 navbar:
     # Navigation menu items
