--- a/_config.yml
+++ b/_config.yml
@@ -109,3 +109,13 @@ mermaid: ## mermaid url https://github.com/knsv/mermaid
   options:  # find more api options from https://github.com/knsv/mermaid/blob/master/src/mermaidAPI.js
     #startOnload: true  // default true
 
+feed:
+  enable: true
+  type: rss2
+  path: rss2.xml
+  limit: 20
+  hub:
+  content: true
+  content_limit: 140
+  order_by: -date
+  autodiscovery: true
