--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 西门闲话
-subtitle: 旧居魔都西门外，年岁不大酷爱吹牛，故曰西门闲话
+subtitle: 旧居魔都西门外，年岁已长仍爱吹牛，故曰西门闲话
 description: ''
 keywords: keyword
 author: Sebastian Qu
